# CORES

./: README.md  pyproject.toml
config/: test.yaml
config/cores/: reward_conformal.yaml  train.yaml  train_extra.yaml
config/dataset/: ba2motifs.yaml  bzr.yaml  cox2.yaml  dd.yaml  enzymes.yaml  mutag.yaml  nci1.yaml  nci109.yaml  proteins.yaml  ptc_fm.yaml
config/logger/: file_system.yaml  wandb.yaml
config/machine/: laptop.yaml  mps.yaml  sic.yaml  sic_cpu.yaml
config/sweep/: action_edge.yaml  action_node.yaml  archi_gat.yaml  archi_gcn.yaml  archi_gin.yaml  cores.yaml  cores_desired_ratios.yaml  cores_lambdas.yaml  dataset_ba2motifs.yaml  dataset_bzr.yaml  dataset_cox2.yaml  dataset_dd.yaml  dataset_enzymes.yaml  dataset_mutag.yaml  dataset_nci1.yaml  dataset_nci109.yaml  dataset_proteins.yaml  dataset_ptc_fm.yaml  gnn.yaml  reward_conformal.yaml  top_k.yaml  top_k_min_score.yaml  top_k_ratio.yaml
config/top_k/: top_k_soft.yaml  train.yaml
cores/: provider.py
cores/utils/: __init__.py  exceptions.py  file_io.py  hash_generator.py  numpy.py  torch.py
jobs_manager/: __init__.py
jobs_manager/core/: jobs_manager.py
jobs_manager/impl/: ht_condor.py  shell.py
playground/: sweeps.ipynb
sweep/: __init__.py
sweep/impl/: random_sweep.py
tests/: test_logger.py  test_metrics.py  test_mlp.py  test_plotter.py
tests/cores/: test_actor_critic.py  test_envs.py  test_ppo.py  test_rewards.py
tests/dataset_preparator/: test_pyg.py
tests/gnn/: test_gnn.py  test_gpool.py  test_topk.py
tests/utils/: test_conformal.py  test_eda.py  test_entropy.py  (+3 more)
(+262 files in other folders)
