[tool.poetry]
name = "cores"
version = "0.1.0"
description = ""
authors = ["Pablo <psanch2103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.2.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
torch-geometric = "^2.4.0"
matplotlib = "^3.8.2"
torchmetrics = "^1.2.1"
wandb = "^0.16.1"
tabulate = "^0.9.0"
ydata-profiling = {version = "^4.6.3", python = ">=3.10,<3.12"}
lightning = "^2.1.3"
omegaconf = "^2.3.0"
gymnasium = "^0.29.1"
tueplots = "^0.0.12"

[tool.poetry.group.prebuild.dependencies]
flake8 = "^6.1.0"
isort = "^5.13.0"
mypy = "^1.7.1"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# isort
[tool.isort]
profile = "black"

# black
[tool.black]
line_length = 100
extend_skip = [".md", ".json"]
multi_line_output=3
force_grid_wrap = 0
